--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/doxygen-filter-ipf"]
 	path = submodules/doxygen-filter-ipf
-	url = git@github.com:byte-physics/doxygen-filter-ipf.git
+	url = https://github.com/byte-physics/doxygen-filter-ipf.git
